--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>apni kaksha</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>welcome to apni kaksha</h1>
     <h2>welcome to apni kaksha</h2>
     <h3>welcome to apni kaksha</h3>
     <h4>welcome to apni kaksha</h4>
     <h5>welcome to apni kaksha</h5>
     <h6>welcome to apni kaksha</h6>
-</body>
+    <hr />
+    <p>
+      <b>Lorem ipsum dolor sit amet consectetur adipisicing elit.</b
+      ><i>
+        Corrupti, maxime. Sit est ipsam in provident, impedit harum placeat
+        eligendi quisquam suscipit modi possimus?</i
+      ><small>
+        culpa voluptatem veniam unde aspernatur inventore ducimus id mollitia?
+        Voluptatem quibusdam odio et nisi culpa blanditiis quas est ab expedita
+        sequi omnis facere, in neque? Assumenda dicta natus iure, sapiente iste
+        praesentium numquam ea facilis culpa fuga odio? Porro,</small
+      >10 <sub>2</sub> 10 <sub>2</sub> reiciendis quasi, esse dolorum delectus
+      totam tempora magni harum iure inventore ea nisi facere odio aperiam
+      obcaecati deleniti assumenda vero rerum corrupti illum libero sed sit? Id
+      ut veniam similique eligendi quam vel iure quaerat dolorum distinctio?
+    </p>
+    <hr />
+    <h2>shopping list</h2>
+    <ul>
+      <li>milk</li>
+      <li>peanut butter</li>
+      <li>coffee</li>
+      <li>jam</li>
+      <li>maggie</li>
+      <li>corn flakes</li>
+      <li>bread</li>
+      <li>rusk(</li>
+    </ul>
+    <hr />
+    <h2>maggie recipe</h2>
+    <ol type="A">
+      <li>boil 1 and half cups of water</li>
+      <li>break the noodle cake in half</li>
+      <li>add the maggie masala</li>
+      <li>
+        add some veggies likes:-
+        <ul>
+          <li>onions</li>
+          <li>tamatoes</li>
+          <li>peas</li>
+          <li>carrot</li>
+        </ul>
+      </li>
+      <li>cook for 2 minutes</li>
+      <li>aur abb humari tasty maggie tayar haii!!!</li>
+    </ol>
+  </body>
 </html>
