--- a/index.html
+++ b/index.html
@@ -59,5 +59,69 @@
       <li>cook for 2 minutes</li>
       <li>aur abb humari tasty maggie tayar haii!!!</li>
     </ol>
+    <hr />
+    <a href="https://www.google.com" target="_blank"><h2>google</h2></a>
+    <a href="page2.html"><h2>page 2</h2></a>
+    <a
+      href="C:\Users\siddhant\Desktop\Python"
+      target="_blank"
+      rel="noopener noreferrer"
+     >
+    <hr>
+    <img src="img/img.PNG" alt="this is an image" width="350">
+    <hr>
+    <video src="video/video.mp4" width="400" controls loop muted poster="img/img.png"></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2QR11oDukn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe src="https://www.apnikaksha.net" frameborder="0" width="560" height="315"></iframe>
+  <hr>
+  <table>
+    <thead>
+    <tr>
+      <th>subject</th>
+      <th>theory</th>
+      <th>practical</th>
+      <th>total marks</th>
+      <th>grades</th>
+    </tr>
+  </thead>
+  <tr>
+    <td>english</td>
+    <td>75</td>
+    <td>_</td>
+    <td>75</td>
+    <td>b1</td>
+  </tr>
+  <tr>
+    <td>maths</td>
+    <td>77</td>
+    <td>_</td>
+    <td>77</td>
+    <td>b1</td>
+  </tr>
+  <tr>
+    <td>physics</td>
+    <td>53</td>
+    <td>17</td>
+    <td>70</td>
+    <td>b2</td>
+  </tr>
+  <tr>
+    <td>chemistry</td>
+    <td>48</td>
+    <td>21</td>
+    <td>69</td>
+    <td>b2</td>
+  </tr>
+  <tr>
+    <td>computer science</td>
+    <td>66</td>
+    <td>30</td>
+    <td>96</td>
+    <td>a1</td>
+  </tr>
+  </table>
+  <tfoot>
+    <th colspan="5">result:pass</th>
+  </tfoot>
   </body>
 </html>
