--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>apni kaksha</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+      h2 {
+        color: red;
+      }
+    </style>
+
   </head>
   <body>
-    <h1>welcome to apni kaksha</h1>
+    <h1 style="color: aqua;">welcome to apni kaksha</h1>
     <h2>welcome to apni kaksha</h2>
     <h3>welcome to apni kaksha</h3>
     <h4>welcome to apni kaksha</h4>
